# PDM

./: .gitignore  FILE_STRUCTURE_GUIDE.md  PROJECT_DEMO_SCRIPT.md  README.md
backend/: Cargo.toml  README.md  build.bat  build.sh
backend/firmware/: channel_controls.json  requirements.txt  stm32_sim.py  test_cases.py  usb_reader.py
backend/rust/: lib.rs  main.rs
backend/src/: api.rs  config.rs  hardware.rs  lib.rs  main.rs  models.rs
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/electron/: main.js  preload.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
