# Package information - tells Cargo about this Rust project
[package]
name = "pdm-backend"
version = "0.1.0"
edition = "2021"
description = "Rust backend for PDM Desktop Application - handles hardware communication"
authors = ["Your Name <your.email@example.com>"]

# Dependencies - external libraries this project needs
[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.0"
socketcan = "3.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
rand = "0.8"
memcache = "0.16" # Memcached client for Rust

# Binary configuration - tells Cargo how to build the executable
[[bin]]
name = "pdm-backend"
path = "src/main.rs"
