# Package information - tells Cargo about this Rust project
[package]
name = "pdm-backend"
version = "0.1.0"
edition = "2021"
description = "Rust backend for PDM Desktop Application - handles hardware communication"
authors = ["Your Name <your.email@example.com>"]

# No dependencies yet – Rust backend is a placeholder. Add here when implementing.
[dependencies]

# Binary configuration - tells Cargo how to build the executable
[[bin]]
name = "pdm-backend"
path = "rust/main.rs"
